fix: CI bugfixing
